--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.15",
+    "@heroicons/vue": "^2.0.18",
     "@types/nprogress": "^0.2.0",
     "axios": "^1.4.0",
     "my-package": "^0.0.0",
