Link back-end to front-end

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-VITE_BASE_URL_STUDENT=http://localhost:8080
-VITE_BASE_URL_TEACHER=https://my-json-server.typicode.com/SE331-2023-project1/project01-e-mam_bodymom/teachers
+VITE_BASE_URL=http://localhost:8080
