--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@headlessui/vue": "^1.7.15",
     "@heroicons/vue": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.6",
     "@types/nprogress": "^0.2.0",
     "axios": "^1.4.0",
     "my-package": "^0.0.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.4",
+    "vee-validate": "^4.11.8",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
