--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"json-server --watch db.json --port 3004\" \"vite\"",
-    "build": "run-p type-check build-only",
+    "build": "build-only",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
