--- a/.github/workflows/aws-docker-hosting-merge.yml
+++ b/.github/workflows/aws-docker-hosting-merge.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: dto80/se331-frontend:latest
+          tags: dto80/se331-lab06:latest
       - name: copy file via ssh password
         uses: appleboy/scp-action@v0.1.4
         with:
