--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-VITE_BACKEND_URL=http://localhost:8080
-VITE_UPLOAD_URL=http://localhost:8080/uploadFile
+VITE_BACKEND_URL=http://18.208.106.67:8999
+VITE_UPLOAD_URL=http://18.208.106.67:8999/uploadFile
+
+
